# Gloaming

./: .gitignore  CMakeLists.txt  GLOAMING_SPEC.md  LICENSE  README.md  config.json
.github/workflows/: linux-build.yml
docs/: ENGINE_SPEC.md  GAME_TERRARIA_SPEC.md  STEAM_DECK_SPEC.md
examples/simple-platformer/: DESIGN.md  mod.json  run.bat  run.sh
examples/simple-platformer/scripts/: atlas.lua  collectibles.lua  enemies.lua  hud.lua  init.lua  player.lua  screens.lua
examples/simple-platformer/scripts/levels/: level_1.lua  level_2.lua  level_3.lua
src/: main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.hpp  AudioTypes.hpp  MusicManager.cpp  MusicManager.hpp  SoundManager.cpp  SoundManager.hpp
src/ecs/: Components.hpp  CoreSystems.hpp  ECS.hpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  Registry.hpp  Systems.hpp
src/engine/: Config.cpp  Config.hpp  ConfigPersistenceLuaBindings.cpp  ConfigPersistenceLuaBindings.hpp  DiagnosticOverlay.cpp  DiagnosticOverlay.hpp  Engine.cpp  Engine.hpp  Gamepad.cpp  Gamepad.hpp  Haptics.cpp  Haptics.hpp  Input.cpp  Input.hpp  InputDeviceTracker.cpp  InputDeviceTracker.hpp  InputGlyphs.cpp  InputGlyphs.hpp  Log.cpp  Log.hpp  PolishLuaBindings.cpp  PolishLuaBindings.hpp  Profiler.cpp  Profiler.hpp  ResourceManager.cpp  ResourceManager.hpp  SeamlessnessLuaBindings.cpp  SeamlessnessLuaBindings.hpp  SteamIntegration.cpp  SteamIntegration.hpp  SystemSupportLuaBindings.cpp  SystemSupportLuaBindings.hpp  Time.cpp  Time.hpp  Vec2.hpp  Window.cpp  Window.hpp
src/gameplay/: CameraController.hpp  CollisionLayers.hpp  CraftingSystem.cpp  CraftingSystem.hpp  DebugDrawSystem.cpp  DebugDrawSystem.hpp  DialogueSystem.hpp  EnemyAI.hpp  EnemyAISystem.cpp  EnemyAISystem.hpp  EnemyLuaBindings.cpp  EnemyLuaBindings.hpp  EnemySpawnSystem.cpp  EnemySpawnSystem.hpp  EntityLuaBindings.cpp  EntityLuaBindings.hpp  EntitySpawning.cpp  EntitySpawning.hpp  GameMode.hpp  Gameplay.hpp  GameplayLoop.hpp  GameplayLoopLuaBindings.cpp  GameplayLoopLuaBindings.hpp  GameplayLoopSystems.cpp  GameplayLoopSystems.hpp  GameplayLuaBindings.cpp  GameplayLuaBindings.hpp  GridMovement.hpp  HousingSystem.cpp  HousingSystem.hpp  InputActions.cpp  InputActions.hpp  LootDropSystem.cpp  LootDropSystem.hpp  NPCLuaBindings.cpp  NPCLuaBindings.hpp  NPCSystem.cpp  NPCSystem.hpp  ParticlePolishLuaBindings.cpp  ParticlePolishLuaBindings.hpp  (+20 more)
src/lighting/: DayNightCycle.hpp  LightMap.cpp  LightMap.hpp  Lighting.hpp  LightingSystem.cpp  LightingSystem.hpp
src/mod/: ContentRegistry.cpp  ContentRegistry.hpp  EventBus.hpp  HotReload.cpp  HotReload.hpp  LuaBindings.cpp  LuaBindings.hpp  ModLoader.cpp  ModLoader.hpp  ModManifest.cpp  ModManifest.hpp
src/physics/: AABB.hpp  Collision.hpp  Physics.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Raycast.hpp  TileCollision.hpp  Trigger.hpp
src/rendering/: Camera.cpp  Camera.hpp  IRenderer.hpp  ParallaxBackground.cpp  ParallaxBackground.hpp  RaylibRenderer.cpp  RaylibRenderer.hpp  Rendering.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Texture.cpp  Texture.hpp  TileRenderer.cpp  TileRenderer.hpp  ViewportScaler.cpp  ViewportScaler.hpp
src/ui/: OnScreenKeyboard.cpp  OnScreenKeyboard.hpp  UIElement.cpp  UIElement.hpp  UIInput.cpp  UIInput.hpp  UILayout.cpp  UILayout.hpp  UIScaling.cpp  UIScaling.hpp  UISystem.cpp  UISystem.hpp  UITypes.hpp  UIWidgets.cpp  UIWidgets.hpp
src/world/: BiomeSystem.cpp  BiomeSystem.hpp  Chunk.cpp  Chunk.hpp  ChunkGenerator.cpp  ChunkGenerator.hpp  ChunkManager.cpp  ChunkManager.hpp  OreDistribution.cpp  OreDistribution.hpp  StructurePlacer.cpp  StructurePlacer.hpp  TileMap.cpp  TileMap.hpp  WorldFile.cpp  WorldFile.hpp  WorldGenLuaBindings.cpp  WorldGenLuaBindings.hpp  WorldGenerator.cpp  WorldGenerator.hpp
tests/: CMakeLists.txt  test_audio.cpp  test_camera.cpp  test_config.cpp  test_config_persistence.cpp  test_display_system.cpp  test_easing.cpp  test_ecs.cpp  test_enemies.cpp  test_entity_spawning.cpp  test_gameplay.cpp  test_gameplay_loop.cpp  test_grid_movement.cpp  test_input_system.cpp  test_lighting.cpp  test_log.cpp  test_mod.cpp  test_npcs.cpp  test_particles_polish.cpp  test_pathfinding.cpp  test_physics.cpp  test_polish.cpp  test_rendering.cpp  test_scenes_timers_save.cpp  test_seamlessness.cpp  test_state_machine.cpp  test_system_support.cpp  test_time.cpp  test_tweens_and_easing.cpp  test_ui.cpp  test_vec2.cpp  test_world.cpp  test_worldgen.cpp
